Correction : passage sur 1 colonne pour l'affichage des cards en version mobile

--- a/css/hebergements.css
+++ b/css/hebergements.css
@@ -27,3 +27,15 @@
 		width: 100%;
 	}
 }
+
+@media (max-width: 768px) {
+	.hebergements-list {
+		display: grid;
+		grid-template-columns: 1fr;
+	}
+
+	.hebergements-list .hebergement-item img {
+		width: 100%;
+		/* height: 200px; */
+	}
+}
